# op-spectra-nn

./: README.md  pyproject.toml  train_basis.py
src/configs/: train.yaml
src/configs/criterion/: basis.yaml
src/configs/dataloader/: default.yaml
src/configs/dataset/: circle.yaml
src/configs/lr_scheduler/: cosine.yaml  default.yaml
src/configs/metrics/: default.yaml
src/configs/model/: baseline_basis.yaml
src/configs/optimizer/: default.yaml
src/configs/transforms/: default.yaml
src/configs/transforms/batch_transforms/: default.yaml
src/configs/writer/: cometml.yaml  tensorboard.yaml  wandb.yaml
src/dataset/: base.py  collate.py  unit_circle.py  utils.py
src/logger/: unit_circle.py  utils.py
src/loss/: base.py  basis.py
src/metrics/: base.py  tracker.py
src/model/: base.py
src/model/basis/: __init__.py  base_function.py  basis.py  utils.py
src/model/basis/baseline/: __init__.py  model.py
src/model/basis/v1/: model.py
src/trainer/: basis_trainer.py
src/transforms/: __init__.py  background_sampler.py  noise_scheduler.py
src/utils/: init.py  torch.py
