[project]
name = "op-spectra-nn"
version = "0.1.0"
description = "Neural approximation of Eigen Functions of Differential Operators"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = []

[dependency-groups]
lint = [
    "pre-commit==4.3.0",
    "ruff==0.14.3",
    "ty==0.0.1a25",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
